fixed overlapping object in array control

--- a/assets/css/enduro_admin/controls/object-container.scss
+++ b/assets/css/enduro_admin/controls/object-container.scss
@@ -4,6 +4,7 @@
 	border: 1px solid rgba(#333, .15);
 	padding: 45px 25px 10px;
 	margin-bottom: 10px;
+	float: none;
 
 	@include media-breakpoint-down(sm) {
 		padding: 10px 10px 0;
